changed Game(); to game();

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h3> Open DevTools console and type Game(); to play </h3>
+<h3> Open DevTools console and type game(); to play </h3>
 
 <script>
 function computerPlay() {
